# noir

./: Cargo.toml  README.md  checkpoint.md
scripts/: install.ps1  install.sh
src/: cli.rs  clipboard.rs  detect.rs  ffmpeg.rs  interactive.rs  main.rs  registry.rs
