[package]
name = "noir"
version = "0.1.0"
edition = "2021"
description = "nr — Universal media converter. Convert any media file to any compatible format."

[[bin]]
name = "nr"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
